sing in sign up implement

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-REACT_APP_AUTH0_DOMAIN=dev-atew1exi.us.auth0.comV
-REACT_APP_AUTH0_CLIENT_ID=dWww2voCl6_IOjC2LuSceRTc8MHeALgKaE8Lej-22gn6Lm4QaR-lH60NcvuWOW03
+REACT_APP_AUTH0_DOMAIN=dev-atew1exi.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=Rcf5cZp12ELcrY1bPMdGWeHVf1sDZAjV
